--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@portabletext/react": "^6.0.2",
+    "@sanity/icons": "^3.7.4",
+    "@sanity/image-url": "^2.0.3",
+    "@sanity/vision": "^5.4.0",
     "next": "16.1.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "next-sanity": "^12.0.12",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "sanity": "^5.4.0",
+    "styled-components": "^6.3.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
