--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-sanity": "^12.0.12",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "resend": "^6.9.2",
     "sanity": "^5.4.0",
     "styled-components": "^6.3.8"
   },
