--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "email": "email dev --port 3001"
   },
   "dependencies": {
     "@portabletext/react": "^6.0.2",
+    "@react-email/components": "^1.0.7",
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^2.0.3",
     "@sanity/vision": "^5.4.0",
@@ -17,11 +19,13 @@
     "next-sanity": "^12.0.12",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-email": "^5.2.8",
     "resend": "^6.9.2",
     "sanity": "^5.4.0",
     "styled-components": "^6.3.8"
   },
   "devDependencies": {
+    "@react-email/preview-server": "^5.2.8",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
